--- a/senchacon/index.html
+++ b/senchacon/index.html
@@ -2,9 +2,8 @@
 <html manifest="">
 
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="UTF-8">
-
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>SenchaCon</title>
 
     <!-- The line below must be kept intact for Sencha Cmd to build your application -->
